<resources>
    <string name="app_name">智能分账</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="people_text">人</string>

    <!-- 提示相关字符串 -->
    <string name="no_net_message">您的网络已断开</string>
    <string name="i_known">我知道了</string>
    <string name="hint">提示</string>
    <string name="loading">正在加载中...</string>
    <string name="load_fail">请求失败</string>
    <string name="get_user_info_fail">获取用户信息出错</string>
    <string name="user_role_cook">厨师</string>
    <string name="user_role_manager">经理</string>
    <string name="user_role_waiter">服务员</string>

    <!-- 生成用户界面 -->
    <string name="createuser_page_companyname">Company Name</string>
    <string name="createuser_page_createhint">请点击以下按钮生成您的分账系统身份</string>
    <string name="createuser_page_btn_text">立即生成</string>

    <!-- 注册界面 -->
    <string name="register_page_title">用户注册</string>
    <string name="register_username">用户名:</string>
    <string name="register_username_hint">请输入用户名</string>
    <string name="register_password">密码:</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_phone_num">手机号:</string>
    <string name="register_phone_num_hint">请输入手机号</string>
    <string name="register_register_button">开始注册</string>
    <string name="register_radio_button_publisher">我是发布者</string>
    <string name="register_radio_button_applicant">我是应聘者</string>

    <!-- 登陆界面 -->
    <string name="login_page_title">用户登录</string>
    <string name="login_username">用户名:</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_userphone">手机号码:</string>
    <string name="login_userphone_hint">请输入您的手机号</string>
    <string name="login_password">密码:</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_login_button">登录</string>
    <string name="login_phone_empty_hint"> 请输入手机号码登陆</string>
    <string name="login_no_role_hint"> 无角色，无法进入主页</string>


    <!-- 发布者订单界面 -->
    <string name="publisher_home_page_title">主页</string>
    <string name="publisher_home_tab_order">订单</string>
    <string name="publisher_home_tab_income">收入</string>
    <string name="publisher_home_tab_scheduling">排班</string>
    <string name="publisher_home_tab_addschedule">发布</string>
    <string name="publisher_home_tab_employees">员工</string>
    <string name="publisher_home_order_today">今日订单</string>
    <string name="publisher_home_order_history">历史订单</string>
    <string name="publisher_home_order_detail_more">查看更多详情</string>
    <string name="publisher_home_order_detail_pickup">收起</string>
    <string name="publisher_home_order_time_title">订单时间</string>
    <string name="publisher_home_order_price_title">订单金额</string>
    <string name="publisher_home_order_desk_num">号桌</string>
    <string name="publisher_home_order_moneyallocation_detail_title">佣金分配详情</string>

    <!-- 发布者排班界面 -->
    <string name="publisher_home_scheduling_list">排班</string>
    <string name="publisher_home_scheduling_current">当前排班</string>
    <string name="publisher_home_scheduling_history">历史排班</string>
    <string name="publisher_home_scheduling_full_text">满</string>

    <!-- 发布者发布排班界面 -->
    <string name="publisher_add_scheduling_ok">完成</string>
    <string name="publisher_add_scheduling_title">发布排班</string>
    <string name="publisher_add_scheduling_rolecompany_text">公司</string>
    <string name="publisher_add_scheduling_rolecompany_hint">请输入公司名称</string>
    <string name="publisher_add_scheduling_role_text">职位</string>
    <string name="publisher_add_scheduling_role_hint">请选择职位</string>
    <string name="publisher_add_scheduling_roleinfo_text">职位信息</string>
    <string name="publisher_add_scheduling_scheduleinfo_text">排班信息</string>
    <string name="publisher_add_scheduling_rolenum_text">人数</string>
    <string name="publisher_add_scheduling_rolenum_hint">请选择人数</string>
    <string name="publisher_add_scheduling_time_text">上班日期</string>
    <string name="publisher_add_scheduling_time_hint">请选择上班日期</string>
    <string name="publisher_add_scheduling_per_text">每个人的佣金比例(%)</string>
    <string name="publisher_add_scheduling_per_hint">请选择每个人的佣金比例</string>
    <string name="publisher_add_scheduling_btn_add">继续添加</string>

    <!-- 发布者添加订单界面 -->
    <string name="publisher_add_order_title">添加订单</string>
    <string name="publisher_add_order_desk_num">桌号</string>
    <string name="publisher_add_order_desk_num_hint">请输入桌号</string>
    <string name="publisher_add_order_money">消费金额</string>
    <string name="publisher_add_order_money_hint">请输入消费金额</string>
    <string name="publisher_add_order_time">消费时间</string>

    <!-- 发布者收益界面 -->
    <string name="publisher_income_detail_title">收入明细</string>
    <string name="publisher_income_detail_item_title">服务佣金</string>


    <!-- 发布者员工界面 -->
    <string name="publisher_employees_title">当前排班所有员工</string>
    <string name="publisher_employees_add">添加员工</string>
    <string name="publisher_employees_username_hint">用户名</string>
    <string name="publisher_employees_userphone_hint">15111260025</string>
    <string name="publisher_employees_userP_per_hint">6%</string>

    <!-- 发布者员工添加界面 -->
    <string name="publisher_employees_add_title">员工资料</string>
    <string name="publisher_employees_add_name_text">姓名</string>
    <string name="publisher_employees_add_name_hint">请输入员工姓名</string>
    <string name="publisher_employees_add_role_text">职位</string>
    <string name="publisher_employees_add_role_hint">请输入员工职位</string>
    <string name="publisher_employees_add_phone_text">手机号</string>
    <string name="publisher_employees_add_phone_hint">请输入员工手机号</string>
    <string name="publisher_employees_add_btn_ok">确定添加</string>


    <!-- 订单列表界面 -->
    <string name="order_page_title">订单</string>



    <!-- 申请者订单界面 -->
    <string name="applicant_home_page_title">主页</string>
    <string name="applicant_home_tab_order">订单</string>
    <string name="applicant_home_tab_income">收入</string>
    <string name="applicant_home_tab_scheduling">排班</string>
    <string name="applicant_home_tab_my">我的</string>
    <string name="applicant_home_order_today">今日订单</string>
    <string name="applicant_home_order_history">历史订单</string>
    <string name="applicant_home_order_detail_more">查看更多详情</string>
    <string name="applicant_home_order_detail_pickup">收起</string>
    <string name="applicant_home_order_time_title">订单时间</string>
    <string name="applicant_home_order_price_title">订单金额</string>
    <string name="applicant_home_order_desk_num">号桌</string>
    <string name="applicant_home_order_moneyallocation_detail_title">佣金分配详情</string>


    <!-- 申请者收益界面 -->
    <string name="applicant_income_detail_title">收入明细</string>
    <string name="applicant_income_detail_item_title">服务佣金</string>

    <!-- 申请者我的界面 -->
    <string name="applicant_my_nousername">暂无用户名</string>
    <string name="applicant_my_mywallet">我的钱包</string>
    <string name="applicant_my_incomerecord">积分记录</string>
    <string name="applicant_my_publish">我的发布</string>
    <string name="applicant_my_myinfo">我的资料</string>
    <string name="applicant_my_myfriend">我的好友</string>
    <string name="applicant_my_mysystemid">我的系统身份</string>

    <!-- 申请者排班界面 -->
    <string name="applicant_home_scheduling_all">全部</string>
    <string name="applicant_home_scheduling_been_applicant">已申请</string>
    <string name="applicant_home_scheduling_full_text">满</string>
    <string name="applicant_scheduling_applicant_btn_text">申请</string>

    <!-- 我的详情 -->
    <string name="my_nick_name">昵 称</string>
    <string name="please_enter_your_name">请输入你的名字</string>
    <string name="my_phone_number">手机号</string>
    <string name="my_info">我的资料</string>


    <!-- 订单详情 -->
    <string name="order_detail">订单详情</string>
    <string name="order_time">订单时间</string>
    <string name="order_money">订单金额</string>
    <string name="company_commission">公司提成</string>
    <string name="commission_allocation_details">佣金分配详情</string>
    <string name="order_detail_chef">厨师</string>
    <string name="order_detail_dishes">配菜</string>
    <string name="order_detail_menu">点菜详情</string>
    <string name="order_detail_money_total">合计</string>


    <!-- 应聘职位详情 -->
    <string name="details">详情</string>
    <string name="job_details">职位详情</string>
    <string name="job_details_chef">厨师</string>
    <string name="job_details_trick">招</string>
    <string name="job_details_commission">佣</string>
    <string name="job_details_address">地</string>
    <string name="job_details_time">时</string>
    <string name="job_apply_immediately">立即申请</string>

    <!-- 我的好友 -->
    <string name="applicant_my_friend">我的好友</string>
    <string name="applicant_add_friend">+添加好友</string>
    <string name="applicant_my_friend_info">好友资料</string>
    <string name="applicant_add_friend_nick_name">请输入昵称</string>
    <string name="applicant_add_friend_phone_number">请输入手机号</string>
    <string name="applicant_add_friend_save">保存</string>


    <!-- 发布岗位信息界面 -->
    <string name="publisher_job_information">岗位信息</string>
    <string name="publisher_jobs">招聘职位</string>
    <string name="publisher_commission_rate">佣金比例</string>
    <string name="publisher_recruitment_number">招聘人数</string>
    <string name="publisher_select_friends">选择好友</string>
    <string name="publisher_job_notes">职位备注</string>
    <string name="publisher_please_choose">请选择</string>
    <string name="publisher_job_notes_hint">请描述岗位职责,不超过100个字</string>
    <string name="publisher_job_add">保存</string>


    <!-- 发布排班界面 -->
    <string name="publisher_Release_schedule">发布排班</string>
    <string name="publisher_company_information">公司信息</string>
    <string name="publisher_company_name">公司名称</string>
    <string name="publisher_company_account">公司账户</string>
    <string name="publisher_store_name">门店名称</string>
    <string name="publisher_Store_number">门店编号</string>
    <string name="publisher_company_proportion">公司比例</string>
    <string name="publisher_store_proportion">门店比例</string>
    <string name="publisher_schedule_information">排班信息</string>
    <string name="publisher_working_time">上班时间(起)</string>
    <string name="publisher_working_off_time">上班时间(止)</string>
    <string name="publisher_working_address">上班地点</string>
    <string name="publisher_working_address_detail">详细地址</string>
    <string name="publisher_please_enter">请输入</string>
    <string name="publisher_please_select">请选择</string>
    <string name="publisher_employee_personnel">招聘人员</string>
    <string name="publisher_add_employee">+ 添加职位</string>

</resources>
