<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/toobar_view"/>


    <LinearLayout
        android:layout_marginTop="@dimen/d50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d20"
        android:layout_marginRight="@dimen/d20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d50"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_username"
                android:layout_weight="3"
                android:textSize="@dimen/d15"
                android:textColor="#000000"
                android:layout_marginLeft="20dp"
                android:gravity="right" />

            <EditText
                android:id="@+id/register_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username_hint"
                android:textSize="@dimen/d15"
                android:layout_weight="1"
                android:layout_marginRight="20dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_phone_num"
                android:textSize="@dimen/d15"
                android:layout_weight="3"
                android:textColor="#000000"
                android:layout_marginLeft="20dp"
                android:gravity="right"/>

            <EditText
                android:id="@+id/register_et_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_phone_num_hint"
                android:textSize="@dimen/d15"
                android:layout_weight="1"
                android:layout_marginRight="20dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_password"
                android:textSize="@dimen/d15"
                android:layout_weight="3"
                android:textColor="#000000"
                android:layout_marginLeft="20dp"
                android:gravity="right"/>

            <EditText
                android:id="@+id/register_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password_hint"
                android:textSize="@dimen/d15"
                android:layout_weight="1"
                android:layout_marginRight="20dp"/>

        </LinearLayout>


        <RadioGroup
            android:id="@+id/register_radiogroup"
            android:layout_marginTop="@dimen/d20"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"

            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/register_radio_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/register_radio_button_publisher" />
            <RadioButton
                android:id="@+id/register_radio_applicant"
                android:layout_marginLeft="@dimen/d20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_radio_button_applicant" />
        </RadioGroup>

    </LinearLayout>


    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/d50"
        android:text="@string/register_register_button"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp" />


</RelativeLayout>