<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_znfz_normal"
    android:orientation="vertical">

    <include layout="@layout/toobar_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d2"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/d50"
            android:layout_marginLeft="@dimen/d15"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_nick_name"
            android:textColor="@color/black"
            android:textSize="@dimen/d18" />

        <EditText
            android:id="@+id/ed_my_friend_nick_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:gravity="center|left"
            android:hint="@string/applicant_add_friend_nick_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/d18" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d2"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/d50"
            android:layout_marginLeft="@dimen/d15"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_phone_number"
            android:textColor="@color/black"
            android:textSize="@dimen/d18" />

        <EditText
            android:id="@+id/tv_my_friend_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:gravity="center|left"
            android:inputType="phone"
            android:textColor="@color/text_color"
            android:hint="@string/applicant_add_friend_phone_number"
            android:textSize="@dimen/d18" />

    </LinearLayout>

</LinearLayout>