<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/bg_znfz_normal"
    android:background="@color/white">


    <include layout="@layout/toobar_view"></include>

    <LinearLayout
        android:layout_below="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <!-- 姓名 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d15"
            android:layout_marginLeft="@dimen/d15"
            android:layout_marginRight="@dimen/d15"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/d20"
                android:layout_height="@dimen/d20"
                android:background="@drawable/ic_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/d10"
                android:textSize="@dimen/d15"
                android:text="@string/publisher_employees_add_name_text"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d45"
            android:layout_marginTop="@dimen/d15"
            android:layout_marginLeft="@dimen/d15"
            android:layout_marginRight="@dimen/d15"
            android:layout_marginBottom="@dimen/d15"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/bg_rectangular_frame"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/publish_add_employee_et_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d45"
                android:paddingLeft="@dimen/d10"
                android:gravity="left|center"
                android:enabled="false"
                android:textColor="@color/black"
                android:background="@color/transparent"
                android:hint="@string/publisher_employees_add_name_hint"
                android:textSize="@dimen/d15"/>

        </RelativeLayout>


        <!-- 职位 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d10"
            android:layout_marginLeft="@dimen/d15"
            android:layout_marginRight="@dimen/d15"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/d20"
                android:layout_height="@dimen/d20"
                android:background="@drawable/ic_role_two"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/d10"
                android:textSize="@dimen/d15"
                android:text="@string/publisher_employees_add_role_text"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d45"
            android:layout_marginTop="@dimen/d15"
            android:layout_marginLeft="@dimen/d15"
            android:layout_marginRight="@dimen/d15"
            android:layout_marginBottom="@dimen/d15"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/bg_rectangular_frame"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/publish_add_employee_et_role"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d45"
                android:paddingLeft="@dimen/d10"
                android:gravity="left|center"
                android:enabled="false"
                android:textColor="@color/black"
                android:background="@color/transparent"
                android:hint="@string/publisher_employees_add_role_hint"
                android:textSize="@dimen/d15"
                android:layout_toLeftOf="@+id/publish_add_employee_iv_rolenumselect"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/d10"
                android:layout_marginBottom="@dimen/d10"
                android:background="@color/gray"
                android:layout_toLeftOf="@+id/publish_add_employee_iv_rolenumselect"/>

            <ImageView
                android:id="@+id/publish_add_employee_iv_rolenumselect"
                android:layout_width="@dimen/d40"
                android:layout_height="match_parent"
                android:padding="@dimen/d10"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_choice_down"/>
        </RelativeLayout>

        <!-- 手机号码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d10"
            android:layout_marginLeft="@dimen/d15"
            android:layout_marginRight="@dimen/d15"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/d20"
                android:layout_height="@dimen/d20"
                android:background="@drawable/ic_phone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/d10"
                android:textSize="@dimen/d15"
                android:text="@string/publisher_employees_add_phone_text"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d45"
            android:layout_marginTop="@dimen/d15"
            android:layout_marginLeft="@dimen/d15"
            android:layout_marginRight="@dimen/d15"
            android:layout_marginBottom="@dimen/d15"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/bg_rectangular_frame"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/publish_add_employee_et_time"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d45"
                android:paddingLeft="@dimen/d10"
                android:gravity="left|center"
                android:enabled="false"
                android:textColor="@color/black"
                android:inputType="number"
                android:background="@color/transparent"
                android:hint="@string/publisher_employees_add_phone_hint"
                android:textSize="@dimen/d15"
                android:layout_toLeftOf="@+id/publish_add_scheduling_iv_timeselect"/>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/publish_add_employee_btn_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/d30"
        android:text="@string/publisher_employees_add_btn_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/d20"
        android:background="@drawable/button_shape_corners_blue"
        android:layout_above="@+id/botomspace"
        android:layout_marginBottom="@dimen/d20"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" />

    <View
        android:id="@+id/botomspace"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d20"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>