<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <!-- 第一部分：订单概要 -->
    <RelativeLayout
        android:id="@+id/publisher_order_list_item_rl_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/publish_order_item_left_right_marging"
        >

        <TextView
            android:id="@+id/publisher_order_list_item_timetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/publisher_home_order_time_title"/>

        <TextView
            android:id="@+id/publisher_order_list_item_desknum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/black"
            android:textSize="@dimen/d12"
            android:text="@string/publisher_home_order_desk_num"/>

        <TextView
            android:id="@+id/publisher_order_list_item_timevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="2018-04-16 14：24"/>


        <TextView
            android:id="@+id/publisher_order_list_item_pricetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/d15"
            android:layout_below="@+id/publisher_order_list_item_timetext"
            android:text="@string/publisher_home_order_price_title"/>

        <TextView
            android:id="@+id/publisher_order_list_item_pricevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/publisher_order_list_item_timevalue"
            android:layout_marginTop="@dimen/d10"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="@dimen/d20"
            android:layout_alignStart="@+id/publisher_order_list_item_timevalue"
            android:text="¥188.00"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/publisher_order_list_item_rl_first"
        android:orientation="vertical">

        <!-- 第二部分：订单详情 -->
        <RelativeLayout
            android:id="@+id/publisher_order_list_item_rl_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/d10"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray"
                android:layout_marginLeft="@dimen/publish_order_item_left_right_marging"
                android:layout_marginRight="@dimen/publish_order_item_left_right_marging"
                />

            <TextView
                android:id="@+id/publisher_order_list_item_rolemoneydetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d15"
                android:gravity="center"
                android:text="@string/publisher_home_order_moneyallocation_detail_title"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/publisher_order_role_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10"
                android:layout_marginLeft="@dimen/d10"
                android:layout_marginRight="@dimen/d10"
                android:layout_marginBottom="@dimen/d1"
                android:background="@color/transparent"
                android:layout_below="@+id/publisher_order_list_item_rolemoneydetail"
                android:dividerHeight="@dimen/d10"
                />
        </RelativeLayout>


        <!-- 第二部分：查看更多详情/收起 -->
        <RelativeLayout
            android:id="@+id/publisher_order_list_item_rl_more"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/d5"
            android:layout_height="@dimen/d30">


            <TextView
                android:id="@+id/publisher_order_list_item_more_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/d12"
                android:text="@string/publisher_home_order_detail_pickup"/>

            <ImageView
                android:id="@+id/publisher_order_list_item_more_image"
                android:layout_width="@dimen/d15"
                android:layout_height="@dimen/d6"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_arrow_up"
                android:layout_marginLeft="@dimen/d10"
                android:layout_toRightOf="@+id/publisher_order_list_item_more_text"
                />


        </RelativeLayout>


    </LinearLayout>











</RelativeLayout>